css/styles.css
*, *:before, *:after {
  box-sizing: border-box;
  margin: 0;
  border: 0;
}

body {
    height: 100%;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
}

.content-wrap {
    text-align: center;
}

.content-body {
    display: flex;
    padding: 0 5%;
}

.padB40 {
  padding-bottom: 2rem;
}

table {
  border-collapse: collapse;
  table-layout: fixed;
  margin: auto;
}

td, th {
  border: 1px solid #ddd;
  padding: 8px;
}

tr:nth-child(even){background-color: #f2f2f2;}

tr:hover {background-color: #ddd;}

th {
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: #4CAF50;
  color: white;
}

.btn {
    display: inline-block;
    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    border: 1px solid transparent;
    padding: .5rem .75rem;
    font-size: 1rem;
    line-height: 1.25;
    border-radius: .25rem;
    transition: all .15s ease-in-out;
}

.btn-dark {
    color: #fff;
    background-color: #343a40;
    border-color: #343a40;
}

